    to Nicolas Mendoza
  * No longer created an invalid debian/control if the extracted long
    description is empty. Closes: #576878
  * reorder fields when writing debian/control
  * Dependencies->add now takes a list
  * don't break perl versions like '5.9.1'
  * core module checks now return perl package versions suitable for
    dependencies. Closes: #571642. Thanks to Josef Kutej.

 -- Damyan Ivanov <dmn@debian.org>  Tue, 09 Mar 2010 08:46:09 +0200

dh-make-perl (0.65) unstable; urgency=low

  * in --refresh mode, overwrite the backups of the modified files under
    debian/
    Closes: #550137 -- debian/* files may disturb package generation process
  * in --make mode, rename any existing debian/ directory to debian.bak/,
    overwriting the later if it exists
  * when looking for docs, ignore .svn/ too
  * do not crash when APT's package cache cannot be opened
  * explain reasons when bumping build-dependencies on debhelper/quilt/etc
  * fix build-system detection when Module::Build::Compat is in play
  * package_already_exists: fix a 'Can't modify non-lvalue subroutine call'
    warning. Thanks to Jozef Kutej for the report and the patch.
  * overrides mechanism deprecated
  * create WNPP cache dir on cache store.
    Closes: 572278. Thanks to Daniel Kahn Gillmor.
  * obsolete using double-dashes in front of commands
  * debian/rules no longer overwritten on refresh if it seems to be using
    dh7-tiny style
  * code reorganization:
    + handling of each command now implemented as a separate module
    + debian/rules manipulation separated in Debian::Rules

 -- Damyan Ivanov <dmn@debian.org>  Mon, 08 Mar 2010 15:55:22 +0200

dh-make-perl (0.64) unstable; urgency=low

  [ Damyan Ivanov ]
  * DhMakePerl: drop unused extract_changelog()
  * DhMakePerl: fix_rules() replaced with update_file_list() for updating
    examples and docs and checks for deprecated/obsolete entries in
    DhMakePerl::Config