@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 5;
+use Test::More tests => 7;
 
 use Debian::AptContents;
 
@@ -26,3 +26,13 @@ is( $apt->find_core_perl_dependency( 'Module::CoreList', '999999.9' ), undef,
 # try a bogus module
 is( $apt->find_core_perl_dependency( 'Foo::Bar', undef ), undef,
     'Foo::Bar is not in core' );
+
+# try a version that is not in Debian's perl
+# this will fail when Debian's perl is sufficiently new
+is( $apt->find_core_perl_dependency( 'Module::CoreList', '2.19' ), undef ,
+    'Module::CoreList 2.19 is not in Debian\'s perl' );
+
+# M::B 0.3603 is in perl 5.11.4
+# perl 5.10.1 has M:B 0.340201 which may fool us
+is( $apt->find_core_perl_dependency( 'Module::Build', '0.3603' ),
+    undef, 'Module::Build 0.3603 is not in Debian\'s perl' );
