@@ -15,6 +15,9 @@ dh-make-perl (0.66) UNRELEASED; urgency=low
   * don't break perl versions like '5.9.1'
   * core module checks now return perl package versions suitable for
     dependencies. Closes: #571642. Thanks to Josef Kutej.
+  * rewrite core module dependency discovery
+    Closes: #571646 -- "Depends: perl (>= 5.11.4)" as result of
+    is_core_module(); Thanks to Josef Kutej
 
  -- Damyan Ivanov <dmn@debian.org>  Tue, 09 Mar 2010 08:46:09 +0200
 
